--- a/manifesto/v1.1/index.mdx
+++ b/manifesto/v1.1/index.mdx
@@ -1,10 +1,12 @@
-## Lidimist Manifesto
-
-<div class="manifesto-info"> 
-    <p>
-        April 01, 2021 - Version 1.1 - 15 min read
-    </p>
-</div>
+---
+title: Lidimist Manifesto
+release: April 01, 2021
+version: v1.1
+update: Updated on April 10, 2021
+read: 15 min read
+author: Rodrigo Favarete
+authorLink: https://favarete.art/
+---
 
 Art will always be the daughter of its time, a daughter who will always be born - regardless of the time's desire - and who can take any form, any medium. Without the proper education, she can get lost in time, being swallowed up by some social network - or advertising project - and expelled back in the form of cheap and fragmenting entertainment, reinforced in its simplistic essence and a robust mass control and consumerism tool. An anesthesia that leads those who saw her to lethargy while the power, in the role of an abusive father, advances everyone like water penetrating their pores.
 
@@ -29,7 +31,7 @@ We found, then, a devastated landscape to live, a world inhabited by society's r
 Art should not be swallowed up by the moment, by selfishness, by bad taste, by the devaluation and tyranny of its time. The artist who feels out of place should not surrender to the will of those who want to indulge. He must not sell the space for creativity within his daily thoughts to jobs that serve only the purpose of essential well-being, of basic survival, works that are done almost irrationally. The artist needs that space for himself or herself.
 
 It is a moment where it is possible to take the gallery to people through technology, but the same technology also flourishes significant flaws that we carry from our evolution as social beings. Intellectual progress is abandoned, and life points to fame only; fame in the form of everything that can be acquired and used as a veneer over a purposeless life. Most of the failures flow into the blind search for value, which is seen only in engagement, followers, views, numbers that shouldn't be used to measure quality. It follows the abandonment of originality in exchange for a disturbed delivery to aesthetics validated in the past to gain similar recognition in these different days now. They imitate techniques, elements, and contexts of previous masters - or obligatorily use materials that were available at that time -, they feed the desire to feel like a renaissance master, an expressionist, or an academic from the past just to show supposed skills and authority using well-known building blocks; they lead art to the aesthetic apathy of our day.
- 
+
 Art as a sign of profound communication must react; it must follow the progress of the ages, it must surpass it, and when this era let itself be restrained, it must pull it.
 
 Knowing that we can analyze any topic in the face of its visible phenomena and infer the invisible ones after deep skeptical analysis. Knowing that we can intuitively explore, based on the knowledge we carry, the subject's temporal and spatial lines without abandoning what Clive Bell defined as a significant form, the beauty or ugliness. We can create the inferred analytical art that materializes an instant of a complete thought, an exhibition where what everyone sees and what only the artist sees live together. Rejecting the Realism thesis because we need more than only having access to what we see immediately, instantly. Also, rejecting the pure and random automatism of the subconscious preached by the masters of Surrealism, as it is it that, in a new context, makes the current generation flee from reflections necessary for their own survival and the survival of creatures that cannot make their own choices.
@@ -57,7 +59,7 @@ We also infer that music, as the most popular tool of expression that we have ev
 For clarity of the Lidimist objective, let us think of other movements and their popular definitions. We start in Realism, portraying man impartially while he interacts with the social environment; representations concerned with the truth of the scene, with reliability, with the dissection of bourgeois society. A more radical version of Realism appears, Naturalism, showing in a voracious and animalistic way the man as a product of this medium, showing rot, going deeper into reality, and aiming at more implicit things. Still in the 20th century, Surrealism arose, proposing something in another direction, proposing the representation of the subconscious, of the dream, which culminated in the creation of unreal, anarchic scenes in the face of reality. Lidimism is the next Naturalism step since man is still a product of the social environment, but it is a product created more intensely, manipulated by the State and algorithms in social networks and search engines. The subjectivity of social reality calls for a more unreal aesthetic to be represented in a truly realistic way - beyond the word. The new reality does not stop just in the eyes or just in the depths of the thoughts; it is the union of the two things: extrapolation, movement, sound and fury, and everything that makes it not empty of reason to exist. Even if the artist chooses not to reveal his reasons, preferring to leave the puzzle to the public to be assembled; because even the revelation would still leave room for analysis - understand the art would be like understanding someone else beyond the artist. How could we sum up a person and everything that makes him or her, just with language? Lidimistic art would still avoid the mistake of imitating modern times that bombard us with useless stimuli.
 
 The lidimist can still think, for example, of multiple fossilized realities in a single moment where all the time is seen because, amid our reflections, we cannot forget that we can express concepts. After all, concepts are also reality. Concepts like time, anguish, and other words that express something abstract, all this dynamic nature can be expressed in a concrete concept as an idea expressed aesthetically, as well as the allegories of medieval aesthetics. Because the absurdity that it means to ignore the dynamic nature to obtain its own benefit, from financial to those related to mental health and self-esteem, is shown through the unreal and utopian, surpassing reality, which can no longer be understood so easily. The unreal can be seen as something that is not only possible but normal, common, as in the works of fantastic realism in Latin America. Doubt can be used to arrive at an expression, a deceptive art.
- 
+
 Let the lidimist art live not only in the galleries but also in the streets; that it captures the love, the fear, the anger, the hate. May art be the language used to explain the profound, let anyone who looks at it know that we are artists because we made it feel the same way by understanding our language!
 
 We know how much the world has ceased to be linear - perhaps it never has been - so the perspective must also cease to be linear in the same way; it can be extreme, curvilinear, spherical, non-Euclidean, atonal, inverse. But it shouldn't be obvious because more than expression, art must also be exploration. Minimalism can be complex in times like this when the era of truth has already been left behind. Today the reality is incomplete; it is up to art to use logic, reason, and ethics to fill these gaps and serve a broader social spectrum, and not a spectrum of art through art. It is up to art to expose the dimension of the everyday themes of natural eyes and mind eyes, just as science had to expose the dimension of our planet seen from outside itself, from another perspective, as we would never have the complete notion just living on it and looking at its walls.
@@ -68,12 +70,3 @@ We have humanitarian science and technology as allies, but the same science and 
 This manifesto is a child of its time, but it must be timeless; a child who must evolve to other times and be against time; it must be updated, collective, improved. A reminder of the power of art in times of difficulty. This manifesto is timeless as long as we live in a world of insanities, as long as we live in times of abuse that are normalized and forgotten - humanitarian and those related to animal rights -; and as long as there are people interested in something better than this world, with humility about reason.
 
 With the hope of one day, this text will become just a reference of past times when ignorance and superficiality needed to be combated because, in some way, they were still celebrated.
-
-<div class="manifesto-info">
-    <a href="https://www.instagram.com/rodrigofavarete/" target="_blank" class="footer-link">
-        Rodrigo Favarete
-    </a>
-    <p>Updated on April 10, 2021</p>
-</div>
-
-
