--- a/manifesto/v1.1/index.pt.mdx
+++ b/manifesto/v1.1/index.pt.mdx
@@ -1,10 +1,12 @@
-## Manifesto Lidimista
-
-<div class="manifesto-info"> 
-    <p>
-        01 Abril de 2021 - Versão 1.1 - Leitura de 15 min
-    </p>
-</div>
+---
+title: Manifesto Lidimista
+release: 01 Abril de 2021
+version: v1.1
+update: Atualizado em 10 Abril de 2021
+read: Leitura de 15 min
+author: Rodrigo Favarete
+authorLink: https://favarete.art/
+---
 
 A arte sempre será filha de sua época, uma filha que sempre nascerá — independentemente do desejo da época — e que poderá tomar qualquer forma, qualquer mídia. Sem a educação correta ela poderá se perder no tempo, sendo engolida por alguma rede social — ou projeto de propaganda publicitária —  e expelida de volta em forma de entretenimento barato e fragmentador, reforçador em sua essência simplista e uma poderosa ferramenta de controle de massas e consumismo. Uma anestesia que leva quem a viu à letargia enquanto o poder, no papel de pai abusador, avança sobre todos como água penetrando em seus poros.
 
@@ -29,7 +31,7 @@ Encontramos, então, uma paisagem devastada para viver; um mundo habitado pela i
 A arte não deve ser engolida pelo momento, pelo egoísmo, pelo mau gosto, pela desvalorização e tirania de sua época. O artista que se sente deslocado não deve entregar-se à vontade dos que querem a sua entrega. Não deve vender o espaço para a criatividade dentro de seus pensamentos diários a trabalhos que servem apenas ao propósito do bem-estar básico, da sobrevivência; trabalhos que são realizados de maneira quase irracional. O artista precisa desse espaço para si.
 
 É um momento onde é possível levar a galeria até as pessoas através da tecnologia, mas a mesma tecnologia também traz a flor grandes falhas que carregamos de nossa evolução como seres sociais. O progresso intelectual é abandonado e a vida aponta para a fama apenas; fama em forma tudo o que puder ser adquirido e usado como um verniz sobre uma vida carente de propósito. Grande parte das falhas deságua na busca cega por valor, que é visto apenas em engajamento, seguidores, visualizações; números que não deveriam ser usados para medir qualidade. Segue-se o abandono da originalidade, em troca a uma entrega perturbada a estéticas validadas no passado para conquistar reconhecimento similar nestes dias diferentes de agora. Imitam técnicas, elementos e contextos de mestres pregressos — ou obrigatoriamente utilizam materiais que estavam disponíveis naquela época —, alimentam o desejo de se sentir um mestre renascentista, um expressionista ou academicista de outrora apenas para mostrar supostas habilidades e autoridade usando bases que já são conhecidas; levam a arte à apatia estética de nossos dias.
- 
+
 A arte como signo de comunicação profunda deve reagir, deve acompanhar o progresso das eras, deve ultrapassá-lo e quando essa era deixar-se refrear, deve puxá-la.
 
 Sabendo que podemos analisar qualquer tema em face de seus fenômenos visíveis e inferir os invisíveis após análise cética profunda. Sabendo que podemos analisar intuitivamente, com base no conhecimento que carregamos, as linhas temporais e espaciais do assunto abordado sem precisarmos abandonar o que Clive Bell definiu como forma significante, a beleza ou a feiura. Podemos criar a arte analítica inferida que concretiza um instante de pensamento completo, uma exposição onde o que todos veem e o que apenas o artista vê convivem. Rejeitando a tese do Realismo, pois precisamos de mais do que apenas o acesso ao que vemos de forma imediata, instantânea. Rejeitando também o automatismo puro e aleatório do subconsciente pregado pelos mestres do Surrealismo, pois é ele que, em um novo contexto, faz a geração atual fugir de reflexões necessárias a sua própria sobrevivência e a sobrevivência de criaturas que não podem fazer as próprias escolhas.
@@ -56,8 +58,8 @@ Inferimos também que a música, como ferramenta de expressão mais popular que 
 
 Para maior clareza do objetivo Lidimista, pensemos em outros movimentos e em suas definições populares. Começamos no Realismo, retratando imparcialmente o homem enquanto ele interage com o meio social; representações preocupadas com a verdade da cena, com a fidedignidade, com a dissecação da sociedade burguesa. Surge uma versão mais radical do Realismo, o Naturalismo, mostrando de forma voraz e animalesca o homem como produto desse meio, mostrando a podridão, indo mais a fundo na realidade e mirando em coisas mais implícitas. Ainda no século XX surgiu o Surrealismo, propondo algo em outra direção, propondo a representação do subconsciente, do sonho, o que culminou na criação de cenas irreais, anárquicas perante a realidade. O Lidimismo  é o próximo degrau Naturalista, pois o homem ainda é produto do meio social, mas é um produto criado de maneira mais intensa, manipulada pelo Estado e por algoritmos em redes sociais e ferramentas de busca. A subjetividade da realidade social pede uma estética mais irreal para ser representada de maneira verdadeiramente realista — além da palavra. A nova realidade não para apenas nos olhos ou apenas no profundo dos pensamentos, ela é a união das duas coisas; ela é extrapolação, movimento, som e fúria, tudo que a torna não vazia de razão para existir. Mesmo que o artista opte por não revelar suas razões, preferindo deixar para o público o quebra-cabeças a ser montado; pois mesmo a revelação ainda deixaria espaços para a análise — entender a arte seria como entender outra pessoa, além do artista. Como poderíamos resumir uma pessoa, e tudo o que a faz ser ela, unicamente com a linguagem? A arte Lidimista ainda evitaria o erro de imitar os tempos modernos que nos bombardeiam com estímulos inúteis.
 
-O lidimista ainda pode pensar, por exemplo, em múltiplas realidades fossilizadas em um instante único onde todo o tempo é enxergado pois, em meio a nossas reflexões, não podemos esquecer de que podemos expressar conceitos. Conceitos também são realidade. Conceitos como o tempo, a angústia e outras palavras que expressam algo abstrato, toda essa natureza dinâmica pode ser expressada em um conceito concreto como uma ideia expressa esteticamente, assim como as alegorias de estética medieval. Pois o absurdo que significa ignorar a natureza dinâmica para obter benefício próprio, de financeiro aos relacionados à saúde mental e autoestima, é mostrado através do irreal e utópico, ultrapassando a realidade, que já não pode ser entendida tão facilmente. O irreal pode ser visto como sendo algo não só possível, mas cotidiano, comum, como nas obras de realismo fantástico da América Latina. A dúvida pode ser usada para chegar em uma expressão, uma arte desenganadora. 
- 
+O lidimista ainda pode pensar, por exemplo, em múltiplas realidades fossilizadas em um instante único onde todo o tempo é enxergado pois, em meio a nossas reflexões, não podemos esquecer de que podemos expressar conceitos. Conceitos também são realidade. Conceitos como o tempo, a angústia e outras palavras que expressam algo abstrato, toda essa natureza dinâmica pode ser expressada em um conceito concreto como uma ideia expressa esteticamente, assim como as alegorias de estética medieval. Pois o absurdo que significa ignorar a natureza dinâmica para obter benefício próprio, de financeiro aos relacionados à saúde mental e autoestima, é mostrado através do irreal e utópico, ultrapassando a realidade, que já não pode ser entendida tão facilmente. O irreal pode ser visto como sendo algo não só possível, mas cotidiano, comum, como nas obras de realismo fantástico da América Latina. A dúvida pode ser usada para chegar em uma expressão, uma arte desenganadora.
+
 Que a arte lidimista more não só nas galerias, mas também nas ruas; que capture o amor, o medo, a ira, o ódio. Que a arte seja a linguagem usada para explicar o profundo, que quem a olhe saiba que somos artistas, pois a fizemos se sentir da mesma forma ao entender nossa linguagem!
 
 Sabemos o quanto o mundo deixou de ser linear — talvez nunca tenha sido —, então a perspectiva também deve deixar de ser linear da mesma forma, ela pode ser forçada, curvilínea, esférica, não-euclidiana, inversa, atonal. Mas não deve ser óbvia, pois mais do que expressão, a arte também deve ser exploração. O minimalismo pode ser complexo em períodos como este, onde a era da verdade já foi deixada para trás. Hoje a realidade é incompleta; cabe a arte usar a lógica, a razão e a ética para preencher essas lacunas e servir a um espectro maior, social, e não um espectro de arte pela arte. Cabe a arte expor a dimensão dos temas cotidianos dos olhos naturais e dos olhos da mente, assim como coube a ciência expôr a dimensão do nosso planeta visto de fora dele próprio, por outra perspectiva, como nunca teríamos a completa noção apenas vivendo sobre ele e olhando suas paredes.
@@ -67,12 +69,3 @@ Temos a ciência e tecnologia humanitárias como aliadas, mas a mesma ciência e
 Este manifesto é um filho de seu tempo, mas deve ser intemporal, um filho que deverá evoluir para outros tempos e ser contra o tempo, deverá ser atualizado, coletivo, aprimorado. Um lembrete do poder da arte em períodos de dificuldade. Este manifesto é atemporal enquanto vivermos em um mundo de insanidades, enquanto vivermos tempos de abusos que são normalizados e esquecidos — os humanitários e os relacionados ao direito dos animais —; e enquanto houver pessoas interessadas em algo melhor do que este mundo, com humildade em relação a razão.
 
 Com a esperança de um dia este texto se tornar apenas uma referência de épocas passadas onde a ignorância e superficialidade precisavam ser combatidas pois, de alguma forma, ainda eram celebradas.
-
-<div class="manifesto-info">
-    <a href="https://www.instagram.com/rodrigofavarete/" target="_blank" class="footer-link">
-        Rodrigo Favarete
-    </a>
-    <p>Atualizado em 10 Abril de 2021</p>
-</div>
-
-
